fix: login and registration page not responsive

--- a/login_page/styles.css
+++ b/login_page/styles.css
@@ -1,6 +1,6 @@
 :root {
 	--accent: #ff9f00;
-	--btnAccent: #ffc464;
+	--btnAccent: #212121;
 }
 
 * {
@@ -9,7 +9,8 @@
 	padding: 0;
 }
 body {
-	font-family: "Ubuntu", sans-serif;
+	font-family: "Fraunces";
+	font-size: 1rem;
 }
 a {
 	text-decoration: none;
@@ -36,6 +37,7 @@ input {
 	transition: 0.3s;
 	border-radius: 50px;
 	border: none;
+	box-shadow: 8px 5px 12px 1px #0c0c0c32;
 }
 .logo {
 	font-family: "Fraunces";
@@ -50,9 +52,10 @@ input {
 	color: var(--accent);
 }
 #card {
-	height: 50%;
-	width: 50%;
-	max-width: 900px;
+	height: 60vh;
+	width: 60vw;
+	max-width: 800px;
+	min-width: 600px;
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
@@ -74,6 +77,7 @@ input {
 
 #section-1,
 #section-2 {
+	padding: 30px;
 	height: 100%;
 	width: 100%;
 	display: flex;
@@ -81,6 +85,7 @@ input {
 	justify-content: center;
 	align-items: center;
 }
+
 #section-2 {
 	background-color: var(--accent);
 	border-radius: 30px 0 0 30px;
@@ -166,5 +171,25 @@ input {
 }
 .cta:hover {
 	cursor: pointer;
+}
+
+@media only screen and (max-width: 615px) {
+	.logo {
+		font-size: 2rem;
+	}
+	#card {
+		flex-direction: column;
+		min-width: 0;
+		width: 80vw;
+	}
+	#section-2 {
+		background-color: var(--accent);
+		border-radius: 30px 30px 0 0;
+	}
+	#a1 {
+		font-size: 2.5rem;
+		font-weight: 900;
+		color: var(--accent);
+	}
 }
 
