--- a/registration_page/styles.css
+++ b/registration_page/styles.css
@@ -1,6 +1,6 @@
 :root {
 	--accent: #ff9f00;
-	--btnAccent: #ffc464;
+	--btnAccent: #212121;
 }
 
 * {
@@ -9,7 +9,7 @@
 	padding: 0;
 }
 body {
-	font-family: "Ubuntu", sans-serif;
+	font-family: "Fraunces";
 }
 a {
 	text-decoration: none;
@@ -31,8 +31,8 @@ a {
 
 input {
 	width: 100%;
-	height: 100%;
-	/* padding: 10px; */
+	/* height: 35px; */
+	padding: 10px;
 	font-size: 1rem;
 	text-align: center;
 	transition: 0.3s;
@@ -55,8 +55,8 @@ input {
 #card {
 	height: 600px;
 	width: 60%;
-	max-width: 1200px;
-	min-width: 800px;
+	max-width: 900px;
+	min-width: 500px;
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
@@ -91,7 +91,7 @@ input {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	padding: 50px;
+	padding: 10px;
 }
 #section-2 {
 	background-color: var(--accent);
@@ -178,5 +178,25 @@ input {
 }
 .cta:hover {
 	cursor: pointer;
+}
+
+@media only screen and (max-width: 615px) {
+	.logo {
+		font-size: 2rem;
+	}
+	#card {
+		flex-direction: column;
+		min-width: 0;
+		width: 80vw;
+	}
+	#section-2 {
+		background-color: var(--accent);
+		border-radius: 30px 30px 0 0;
+	}
+	#a1 {
+		font-size: 2.5rem;
+		font-weight: 900;
+		color: var(--accent);
+	}
 }
 
